k8s/app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: records-api
  namespace: nagp-app
  labels:
    app.kubernetes.io/name: records-api
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: records-api
