k8s/app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: nagp-app
  labels:
    app.kubernetes.io/name: postgres
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
  selector:
    app.kubernetes.io/name: postgres
